...
    <string name="battery_saver_available">"Battery saver available"</string>
    <string name="start_saving">"Start saving"</string>
    <string name="battery_saver_not_now">"Not now"</string>
    <string name="keep_screen_on">"Keep Screen On?"</string>
    <string name="keeping_the_screen_on_prevents_display">"Keeping the screen on prevents display sleep and will increase battery consumption."</string>
    <string name="enable">"Enable"</string>
    <string name="stay">"Stay"</string>
    <string name="disconnect_all_sessions">"Disconnect all sessions?"</string>
    <string name="disconnect_all_active_terminal_sessions_any">"Disconnect all active terminal sessions? Any running shell processes in those PTYs will be terminated."</string>
    <string name="disconnect_all">"Disconnect all"</string>
    <string name="choose_host_to_keep">"Choose host to keep"</string>
    <string name="keep_selected">"Keep selected"</string>
    <string name="restore">"Restore"</string>
...
